--- a/practicafinal/templates/index.html
+++ b/practicafinal/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='es'>
 <link href='/css/style.css' rel='stylesheet' type='text/css'>
+<link rel="shortcut icon" href="/img/favicon.png">
 
 <body>
     <div id='header-wrapper'>
